feat: 完善系统功能 - 添加数据库支持、优化UI、更新分析逻辑
- 添加SQLite数据库支持，实现机构码和问卷数据持久化
- 优化问卷管理和机构码管理界面，改为表格形式
- 更新四维能力详细分析生成逻辑，改为单段描述格式
- 修复学术能力自动填充问题
- 添加推荐信息自动填充功能
- 优化用户体验和界面布局

--- a/.gitignore
+++ b/.gitignore
@@ -33,4 +33,7 @@ university_logos_result.json
 test-logos.html
 
 # Excel数据文件（如果包含敏感信息）
-# image/top200.xlsx
+# image/top200.xlsxdatabase.sqlite
+node_modules/
+*.log
+.env
