--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "study-abroad-potential-report",
   "version": "1.0.0",
   "description": "留学潜力报告生成系统",
-  "main": "index.html",
+  "main": "server.js",
   "scripts": {
-    "start": "npx http-server . -p 3000 -o -c-1",
-    "dev": "npx http-server . -p 3000 -o -c-1",
+    "start": "node server.js",
+    "dev": "node server.js",
+    "frontend": "npx http-server . -p 3000 -o -c-1",
     "start-alt": "npx http-server . -p 8081 -o -c-1",
     "preview": "npx http-server . -p 8080 -o -c-1",
     "serve": "npx http-server . -p 3000 -c-1"
@@ -13,6 +14,12 @@
   "keywords": ["education", "report", "study-abroad"],
   "author": "",
   "license": "MIT",
+  "dependencies": {
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "sqlite3": "^5.1.6",
+    "body-parser": "^1.20.2"
+  },
   "devDependencies": {
     "http-server": "^14.1.1"
   }
